--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-messages": "^1.0.1",
     "express-session": "^1.17.1",
+    "express-validator": "^4.3.0",
     "mongoose": "^5.9.9",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
